--- a/pod1.html
+++ b/pod1.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equifuel™ - Catalog</title>
-    <link rel="shortcut icon" type="image/png" href=favicon.png> 
-    <link rel="stylesheet" href="photo.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="leftside"> 
-        <div class="logo"><a href="index.html">equifuel™</a></div> <!-- Logo w formie tekstu przenoszące do strony głównej  -->
+<body class="gallery-page">
+    <div class="leftside">
+        <div class="logo gallery-logo"><a href="index.html">equifuel™</a></div>
     </div>
-    <div class="gallery-container"> <!-- Div galerii katalogu -->
+    <div class="gallery-container">
         <div class="gallery-item" data-index="1">
             <img src="pasza1.png">
         </div>
