--- a/pod2.html
+++ b/pod2.html
@@ -1,26 +1,25 @@
+<!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equifuel™ - About us</title>
-    <link rel="shortcut icon" type="image/png" href=favicon.png> 
-    <link rel="stylesheet" href="photo.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="pod2css.css">
 </head>
-<body>
-    <div class="leftside"> 
-        <div class="logo"><a href="index.html">equifuel™</a></div> <!-- Logo w formie tekstu przenoszące do strony głównej  -->
+<body class="about-page">
+    <div class="leftside">
+        <div class="logo"><a href="index.html">equifuel™</a></div>
     </div>
     <div class="desc-container">
         <div class="desc-item">
-            EquiFuel™ is a family-owned company founded in 2016 in Poznań, Poland, with a passion for producing top-quality nutritional products for horses. We specialize in crafting premium horse feeds, supplements, and treats to meet the diverse needs of equine enthusiasts.
+            EquiFuel™ is a family-owned company founded in 2016 in Poznań, Poland, with a passion for producing top-quality nutritional products for horses. We specialize in crafting premium horse feed and supplements tailored to the needs of equine athletes and companions.
         </div>
         <div class="desc-item">
-            At EquiFuel™, we take pride in our meticulous attention to detail throughout the production process. Every step, from sourcing the finest ingredients to the final packaging, is executed with the utmost care and precision. Our commitment to excellence extends to our rigorous multi-stage quality control measures, ensuring that each product meets our high standards before it reaches our customers.
+            At EquiFuel™, we take pride in our meticulous attention to detail throughout the production process. Every step, from sourcing the finest ingredients to the final packaging, is executed with the highest standards, ensuring unmatched quality and safety.
         </div>
         <div class="desc-item">
-            With EquiFuel™, you can trust that your horse is receiving only the best nutrition, carefully crafted to support their health, performance, and overall well-being. Join us in providing your equine companions with the nourishment they deserve.
+            With EquiFuel™, you can trust that your horse is receiving only the best nutrition, carefully crafted to support their health, performance, and overall well-being. Join us in providing your horse with the care they deserve.
         </div>
     </div>
 </body>
