--- a/pod3.html
+++ b/pod3.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equifuel™ - Distributors</title>
-    <link rel="shortcut icon" type="image/png" href=favicon.png> 
-    <link rel="stylesheet" href="pod3css.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
-    
 </head>
-<body>
-    <h2 class="logo">
+<body class="distributors-page">
+    <h2 class="logo distributors-logo">
         <a href="index.html">equifuel™</a>
     </h2>
     <ul class="lista">
