--- a/index.html
+++ b/index.html
@@ -10,46 +10,42 @@
 <body>
     <section class="showcase">
         <header>
-            <h2 class="logo">
-              equifuel™<br>
-            <div class="pure">
-              the purest.
-            </div> 
-            </h2>
-          <div class="toggle"></div>
+            <div class="logo-main">
+                <span class="logo-text">equifuel™</span>
+                <span class="pure">the purest.</span>
+            </div>
+            <div class="toggle"></div>
         </header>
         <div class="overlay"></div>
-        <div class="text">
-          <h2>Equifuel™</h2> 
+        <div class="text text-left">
+          <h2>Equifuel™</h2>
           <h3>Premium horse nutrition</h3>
-          <p>
-           Highest quality dietary supplements and feed for horses
-            </p>
+          <p>Highest quality dietary supplements and feed for horses</p>
           <a href="pod1.html">catalog</a>
-          </div>
+        </div>
         <ul class="social">
           <h5><a href="pod1.html">Products</a></h5><br>
           <h5><a href="pod3.html">Distributors</a></h5><br>
           <h5><a href="contact.html">Contact</a></h5><br>
         </ul>
-      </section>
-      <div class="menu">
+    </section>
+    <div class="menu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="pod1.html">Products </a></li>
+          <li><a href="pod1.html">Products</a></li>
           <li><a href="pod2.html">About us</a></li>
           <li><a href="pod3.html">Distributors</a></li>
           <li><a href="contact.html">Contact</a></li><br>
           Made by @Gabriel Jarosz
         </ul>
-      </div>
-      <script> 
+    </div>
+    <script>
         const menuToggle = document.querySelector('.toggle');
         const showcase = document.querySelector('.showcase');
         menuToggle.addEventListener('click', () => {
-          menuToggle.classList.toggle('active');
-          showcase.classList.toggle('active');
+            menuToggle.classList.toggle('active');
+            showcase.classList.toggle('active');
         })
-      </script>
+    </script>
 </body>
 </html>
