--- a/pod1.html
+++ b/pod1.html
@@ -11,16 +11,31 @@
     <div class="leftside">
         <div class="logo gallery-logo"><a href="index.html">equifuel™</a></div>
     </div>
-    <div class="gallery-container">
-        <div class="gallery-item" data-index="1">
-            <img src="pasza1.png">
+    <main class="catalog-main">
+        <h1 class="catalog-title">Products Catalog</h1>
+        <div class="catalog-grid">
+            <div class="catalog-card">
+                <img src="pasza1.png" alt="Product 1" class="catalog-img">
+                <div class="catalog-info">
+                    <div class="catalog-name">EquiMix™</div>
+                    <div class="catalog-desc">Balanced daily horse feed for optimal health. Contains vitamins, minerals, and probiotics.</div>
+                </div>
+            </div>
+            <div class="catalog-card">
+                <img src="pasza2.png" alt="Product 2" class="catalog-img">
+                <div class="catalog-info">
+                    <div class="catalog-name">EquiSport™</div>
+                    <div class="catalog-desc">Performance blend for sport horses. Extra energy, joint support, and easy digestion.</div>
+                </div>
+            </div>
+            <div class="catalog-card">
+                <img src="pasza3.png" alt="Product 3" class="catalog-img">
+                <div class="catalog-info">
+                    <div class="catalog-name">EquiSenior™</div>
+                    <div class="catalog-desc">Special formula for older horses. Supports mobility, immunity and healthy aging.</div>
+                </div>
+            </div>
         </div>
-        <div class="gallery-item" data-index="2">
-            <img src="pasza2.png">
-        </div>
-        <div class="gallery-item" data-index="3">
-            <img src="pasza3.png">
-        </div>
-    </div>
+    </main>
 </body>
 </html>
