--- a/pod3.html
+++ b/pod3.html
@@ -15,14 +15,8 @@
     </h2>
     <ul class="lista">
         <li><b>Distributors:</b></li>
-        <li>• 4746 Henery Street, Wichita, 316-973-4362</li>
-        <li>• 1433 Haven Lane, Holt, 517-694-5761</li>
-        <li>• 2099 Neuport Lane, Dunwoody, 770-350-1519</li>
-        <li>• Al. Niepodległości 118, Warszawa, 51 556 16 65</li>
-        <li>• ul. Karłowicza Mieczysława 33, Kielce, 60 353 89 79</li>
-        <li>• Bramstrup 99, København K, 21-21-64-46</li>
-        <li>• Brogade 25, Esbjerg, 30-97-48-30</li>
-        <li>• Lundsbjergvej 91, Frederiksberg C, 60-46-59-74</li>
+        <li>Al. Niepodległości 118, Warszawa, 51 556 16 65</li>
+        <li>ul. Karłowicza Mieczysława 33, Kielce, 60 353 89 79</li>
     </ul>
 </body>
 </html>
