--- a/pod3.html
+++ b/pod3.html
@@ -15,8 +15,8 @@
     </h2>
     <ul class="lista">
         <li><b>Distributors:</b></li>
-        <li>Al. Niepodległości 118, Warszawa, 51 556 16 65</li>
-        <li>ul. Karłowicza Mieczysława 33, Kielce, 60 353 89 79</li>
+        <li>Al. Niepodległości 118, Warszawa</li>
+        <li>ul. Karłowicza Mieczysława 33, Kielce</li>
     </ul>
 </body>
 </html>
