--- a/pod3.html
+++ b/pod3.html
@@ -16,7 +16,7 @@
     <ul class="lista">
         <li><b>Distributors:</b></li>
         <li>Al. Niepodległości 118, Warszawa</li>
-        <li>ul. Karłowicza Mieczysława 33, Kielce</li>
+        <li>ul. Karłowicza 33, Kielce</li>
     </ul>
 </body>
 </html>
